[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/npcs/NPCAgent2D.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b1yddt0mubqvl" path="res://npc.png" id="2"]

[node name="NPCAgent2D" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0
path_max_distance = 6.0
avoidance_enabled = true
radius = 2.0

[node name="SelectionIndicator" type="Node2D" parent="."]
visible = false

[node name="SelectionCircle" type="Sprite2D" parent="SelectionIndicator"]
modulate = Color(0, 1, 0, 0.5)
scale = Vector2(0.6, 0.6)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = -20.0
value = 100.0
show_percentage = false

[node name="StateLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -25.0
text = "2D"
horizontal_alignment = 1
vertical_alignment = 1